# ChangeLog for dev-cpp/atkmm
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-cpp/atkmm/ChangeLog,v 1.23 2011/10/16 17:26:52 xarthisius Exp $

  16 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org> atkmm-2.22.5.ebuild:
  ppc/ppc64 stable wrt #385699

  04 Oct 2011; Jeroen Roovers <jer@gentoo.org> atkmm-2.22.5.ebuild:
  Stable for HPPA (bug #372353).

  25 Sep 2011; Raúl Porcel <armin76@gentoo.org> atkmm-2.22.5.ebuild:
  alpha/ia64/sh/sparc stable wrt #372353

  08 Sep 2011; Fabian Groffen <grobian@gentoo.org> atkmm-2.22.5.ebuild:
  Marked ~sparc-solaris

  17 Jul 2011; Markus Meier <maekke@gentoo.org> atkmm-2.22.5.ebuild:
  arm stable, bug #372353

  16 Jul 2011; Markus Meier <maekke@gentoo.org> atkmm-2.22.5.ebuild:
  x86 stable, bug #372353

  01 Jul 2011; Markos Chandras <hwoarang@gentoo.org> atkmm-2.22.5.ebuild:
  Stable on amd64 wrt bug #372353

  10 Apr 2011; Samuli Suominen <ssuominen@gentoo.org> atkmm-2.22.5.ebuild:
  Remove useless libtool archive wrt #362879 by Cesko Voeten.

*atkmm-2.22.5 (31 Mar 2011)

  31 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org> +atkmm-2.22.5.ebuild:
  Bump to 2.22.5

*atkmm-2.22.4 (25 Mar 2011)

  25 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  -atkmm-2.22.2-r1.ebuild, +atkmm-2.22.4.ebuild:
  Add 2.22.4, removes build-time dep on mm-common, remove old

  22 Mar 2011; Brent Baude <ranger@gentoo.org> atkmm-2.22.2.ebuild:
  Marking atkmm-2.22.2 ppc stable for bug 353436

  22 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  atkmm-2.22.2-r1.ebuild:
  Inherit autotools for eautoreconf

  21 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> atkmm-2.22.2.ebuild:
  ppc64 stable wrt #353436

*atkmm-2.22.2-r1 (21 Mar 2011)

  21 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org> -atkmm-2.22.1.ebuild,
  +atkmm-2.22.2-r1.ebuild:
  Fix documentation install breakage with glibmm-2.27.97

  12 Mar 2011; Raúl Porcel <armin76@gentoo.org> atkmm-2.22.2.ebuild: