@@ -1,30 +1,0 @@
-# Copyright 1999-2011 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/atkmm/atkmm-2.22.2.ebuild,v 1.7 2011/03/22 19:58:18 ranger Exp $
-
-EAPI="3"
-GCONF_DEBUG="no"
-
-inherit gnome2
-
-DESCRIPTION="C++ interface for the ATK library"
-HOMEPAGE="http://www.gtkmm.org"
-
-LICENSE="LGPL-2.1"
-SLOT="0"
-KEYWORDS="alpha amd64 arm hppa ia64 ppc ppc64 sh sparc x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~x86-solaris"
-IUSE="doc"
-
-RDEPEND=">=dev-cpp/glibmm-2.24[doc?]
-	>=dev-libs/atk-1.12
-	dev-libs/libsigc++:2
-	!<dev-cpp/gtkmm-2.22.0"
-DEPEND="${RDEPEND}
-	dev-util/pkgconfig"
-
-pkg_setup() {
-	DOCS="AUTHORS ChangeLog NEWS README"
-	G2CONF="${G2CONF}
-		--disable-maintainer-mode
-		$(use_enable doc documentation)"
-}
