@@ -1,6 +1,12 @@
 # ChangeLog for dev-cpp/pangomm
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/pangomm/ChangeLog,v 1.49 2011/10/21 14:08:26 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/pangomm/ChangeLog,v 1.50 2011/10/26 17:57:24 pacho Exp $
+
+*pangomm-2.28.4 (26 Oct 2011)
+
+  26 Oct 2011; Pacho Ramos <pacho@gentoo.org> -pangomm-2.26.3.ebuild,
+  +pangomm-2.28.4.ebuild:
+  Version bump, remove old.
 
   21 Oct 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> pangomm-2.28.3.ebuild:
   x86 stable wrt bug #385699
