@@ -1,6 +1,12 @@
 # ChangeLog for dev-cpp/atkmm
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/atkmm/ChangeLog,v 1.23 2011/10/16 17:26:52 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/atkmm/ChangeLog,v 1.24 2011/10/26 17:53:33 pacho Exp $
+
+*atkmm-2.22.6 (26 Oct 2011)
+
+  26 Oct 2011; Pacho Ramos <pacho@gentoo.org> -atkmm-2.22.2.ebuild,
+  -atkmm-2.22.4.ebuild, +atkmm-2.22.6.ebuild:
+  Version bump, remove old.
 
   16 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org> atkmm-2.22.5.ebuild:
   ppc/ppc64 stable wrt #385699
